...
    },
    "common.continue" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Continue"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Continuar"
...
            "state" : "translated",
            "value" : "出售"
          }
        }
      }
    },
    "game.startWave" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Start Wave"
          }
...
            "state" : "translated",
            "value" : "设置"
          }
        }
      }
    },
    "home.start" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Start Mission"
          }
...
